--- a/src/main/webapp/pages/css/mainPage.css
+++ b/src/main/webapp/pages/css/mainPage.css
@@ -1,3 +1,12 @@
+html, body {
+    margin: 0;
+    padding: 0;
+}
+
+* {
+    box-sizing: border-box;
+}
+
 @font-face {
     font-family: 'Rocher';
     src: url(https://assets.codepen.io/9632/RocherColorGX.woff2);
@@ -27,7 +36,7 @@ body, .header, main, footer {
 
 .header {
     background-color: rgba(173, 255, 47, 0.6);
-    height: 15%;
+    min-height: 15%;
     flex-shrink: 0;
     display: grid;
     grid-template-columns: 30% 23% 23% 23%;
@@ -75,6 +84,7 @@ main {
     background-repeat: no-repeat;
     background-size: 100% 100%;
     margin-bottom: -1px;
+    min-height: 70%;
 }
 
 /*main .button_container {*/
