--- a/src/main/webapp/pages/css/newMatch.css
+++ b/src/main/webapp/pages/css/newMatch.css
@@ -1,3 +1,12 @@
+html, body {
+    margin: 0;
+    padding: 0;
+}
+
+* {
+    box-sizing: border-box;
+}
+
 main form {
     height: 100%;
     width: auto;
