finish with all pages except matches

--- a/src/main/webapp/pages/css/match.css
+++ b/src/main/webapp/pages/css/match.css
@@ -6,3 +6,62 @@ html, body {
 * {
     box-sizing: border-box;
 }
+
+.wrapper {
+    min-height: 75px;
+    background-color: darkblue;
+    display: flex;
+
+    color: white;
+}
+
+.player {
+    display: flex;
+    justify-content: center;
+    min-width: 30%;
+}
+
+.player div {
+    margin: 5px 40px;
+}
+
+.player h1 {
+    text-align: center;
+}
+
+.sign {
+    margin: auto;
+}
+
+main {
+    display: flex;
+    align-items: flex-end;
+}
+
+.buttons {
+    min-height: 10%;
+    width: 100%;
+    display: grid;
+    grid-template-columns: 50% 50%;
+    position: relative;
+}
+
+.buttons button {
+    font-size: 30px;
+    background-color: blue;
+    color: white;
+    border-radius: 10px;
+    min-height: 50px;
+}
+
+.buttons .button1 {
+    position: absolute;
+    top: 30%;
+    left: 25%;
+}
+
+.buttons .button2 {
+    position: absolute;
+    top: 30%;
+    right: 25%;
+}
