--- a/src/main/webapp/pages/css/mainPage.css
+++ b/src/main/webapp/pages/css/mainPage.css
@@ -36,7 +36,7 @@ body, .header, main, footer {
 
 .header {
     background-color: rgba(173, 255, 47, 0.6);
-    min-height: 15%;
+    min-height: 10%;
     flex-shrink: 0;
     display: grid;
     grid-template-columns: 30% 23% 23% 23%;
@@ -87,30 +87,6 @@ main {
     min-height: 70%;
 }
 
-/*main .button_container {*/
-/*    height: 18%;*/
-/*    display: flex;*/
-/*    grid-template-columns: 40% 40%;*/
-/*}*/
-
-
-/*main .button_new_match, .button_matches {*/
-/*    position: relative;*/
-/*    padding: 10px;*/
-/*    background-color: rgba(41, 41, 239, 0.7);*/
-/*    border: 5px solid yellow;*/
-/*    border-radius: 25px;*/
-/*    height: 35px;*/
-/*    margin-left: 20%;*/
-/*    left: 10%;*/
-/*    align-self: center;*/
-/*}*/
-
-/*main div a {*/
-/*    text-decoration: none;*/
-/*    font-size: 30px;*/
-/*    color: white;*/
-/*}*/
 
 
 footer {
@@ -119,6 +95,7 @@ footer {
     flex-shrink: 0;
     display: grid;
     grid-template-columns: 50% 50%;
+    min-height: 10%;
 }
 
 footer div {
@@ -129,7 +106,7 @@ footer div {
 
 footer .first_block p {
     font-family: 'Serif', sans-serif;
-    font-size: 30px;
+    font-size: 25px;
     color: gray;
     margin-left: 10%;
 }
@@ -141,7 +118,12 @@ footer .sec_block {
 footer .sec_block a {
     text-decoration: none;
     font-family: 'Serif', sans-serif;
-    font-size: 30px;
+    font-size: 25px;
     color: gray;
     margin-left: 15%;
+    transition: color 0.3s;
+}
+
+footer .sec_block a:hover {
+    color: white;
 }
