change match response and now we can see score in real time update

--- a/src/main/webapp/pages/css/match.css
+++ b/src/main/webapp/pages/css/match.css
@@ -11,7 +11,7 @@ html, body {
     min-height: 75px;
     background-color: darkblue;
     display: flex;
-
+    width: auto;
     color: white;
 }
 
