--- a/src/main/webapp/pages/css/mainPage.css
+++ b/src/main/webapp/pages/css/mainPage.css
@@ -43,6 +43,7 @@ body, .header, main, footer {
     align-items: center;
     justify-content: center;
     width: auto;
+    margin: 0;
 }
 
 .header div {
