--- a/src/main/webapp/pages/css/matches.css
+++ b/src/main/webapp/pages/css/matches.css
@@ -10,9 +10,9 @@ main {
     justify-content: center;
 }
 
-.table {
-    min-width: 65%;
-    min-height: 75%;
+.wrapper {
+    min-width: 70%;
+    min-height: 70%;
     background-color: #3b3b3b;
     border-radius: 25px;
 }
@@ -20,21 +20,22 @@ main {
 .sign {
     text-align: center;
     color: lightblue;
-    font-size: 50px;
+    font-size: 40px;
 }
 
 .head {
     width: 100%;
-    margin-left: 10px;
+    margin-left: 30px;
+    margin-top: 40px;
 }
 
 .head label {
     font-size: 30px;
     color: white;
 }
+
 .head input {
     font-size: 20px;
-
     background-color: #646464;
     color: white;
 }
@@ -47,4 +48,87 @@ main {
     min-height: 30px;
     width: 140px;
     padding: 2px 10px;
+    border: 2px solid lightblue;
+    transition: color 0.3s;
+}
+.head form .button:hover {
+    color: #a8a1a1;
+}
+
+.table {
+    margin-top: 40px;
+    margin-left: 30px;
+    margin-right: 30px;
+}
+
+.table.head-main {
+    margin: 0;
+    padding: 0;
+    min-height: 40%;
+}
+
+.table.head {
+    display: grid;
+    grid-template-columns: 10% 30% 30% 30%;
+    width: auto;
+    margin: 0;
+}
+
+.table.head div {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 2px;
+    margin: 1px;
+    border: 3px solid #d0d0d0;
+    color: lightblue;
+    font-size: 30px;
+}
+
+.table .main {
+    display: grid;
+    grid-template-columns: 10% 30% 30% 30%;
+    width: auto;
+    margin: 0;
+}
+
+.table.main div {
+    margin: 1px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 2px;
+    border: 3px solid #d0d0d0;
+    color: lightblue;
+    font-size: 30px;
+    height: 55px;
+}
+
+.table.footer {
+    width: auto;
+    margin-bottom: 40px;
+}
+
+.table.footer form {
+    margin: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.table.footer button {
+    font-size: 25px;
+    background-color: blue;
+    color: white;
+    border-radius: 10px;
+    border: 2px solid lightblue;
+    min-height: 30px;
+    width: 140px;
+    padding: 2px 10px;
+    margin: 10px;
+    transition: color 0.3s;
+}
+
+.table.footer button:hover {
+    color: #a8a1a1;
 }
