--- a/src/main/webapp/pages/css/matches.css
+++ b/src/main/webapp/pages/css/matches.css
@@ -1,10 +1,8 @@
 main {
-    flex-grow: 1;
     background-image: url('/img/court.png');
     background-repeat: no-repeat;
     background-size: 100% 100%;
     margin-bottom: -1px;
-    min-height: 70%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -12,12 +10,13 @@ main {
 
 .wrapper {
     min-width: 70%;
-    min-height: 70%;
+    min-height: 90%;
     background-color: #3b3b3b;
     border-radius: 25px;
 }
 
 .sign {
+    margin-top: 5px;
     text-align: center;
     color: lightblue;
     font-size: 40px;
@@ -26,7 +25,6 @@ main {
 .head {
     width: 100%;
     margin-left: 30px;
-    margin-top: 40px;
 }
 
 .head label {
@@ -51,20 +49,18 @@ main {
     border: 2px solid lightblue;
     transition: color 0.3s;
 }
+
 .head form .button:hover {
     color: #a8a1a1;
 }
-
 .table {
-    margin-top: 40px;
-    margin-left: 30px;
-    margin-right: 30px;
+    padding: 0 20px;
 }
 
 .table.head-main {
     margin: 0;
     padding: 0;
-    min-height: 40%;
+    min-height: 60%;
 }
 
 .table.head {
@@ -101,19 +97,19 @@ main {
     border: 3px solid #d0d0d0;
     color: lightblue;
     font-size: 30px;
-    height: 55px;
 }
 
 .table.footer {
     width: auto;
-    margin-bottom: 40px;
+    margin-bottom: 0;
 }
 
 .table.footer form {
-    margin: 0;
     display: flex;
     align-items: center;
     justify-content: center;
+    margin: 0;
+    padding: 0;
 }
 
 .table.footer button {
@@ -122,12 +118,15 @@ main {
     color: white;
     border-radius: 10px;
     border: 2px solid lightblue;
-    min-height: 30px;
-    width: 140px;
+    min-width: 15%;
+    min-height: 10%;
     padding: 2px 10px;
-    margin: 10px;
     transition: color 0.3s;
+    margin-left: 10px;
+    margin-right: 10px;
 }
+
+
 
 .table.footer button:hover {
     color: #a8a1a1;
