--- a/src/main/webapp/pages/css/mainPage.css
+++ b/src/main/webapp/pages/css/mainPage.css
@@ -60,7 +60,7 @@ body {
 }
 
 main {
-    background-image: url('/img/court.png');
+    background-image: url('https://burst.shopifycdn.com/photos/aerial-view-of-two-people-playing-tennis-in-the-sun.jpg?exif=0&iptc=0');
     background-repeat: no-repeat;
     background-size: 100% 100%;
     min-height: calc(100% - 25%);
